[package]
edition      = "2024"
name         = "trailsense-edge"
rust-version = "1.88"
version      = "0.1.0"
description  = "Privacy focused people counting"

[[bin]]
name = "trailsense-edge"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "esp-alloc",
  "esp-radio",
  "esp32",
  "log-04",
  "embassy",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }
log                    = "0.4.27"

bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
embedded-io = "0.7.1"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32",
  "log-04",
  "smoltcp",
  "sniffer",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-tcp",
  "dns-max-server-count-4", 
] }
ieee80211 = "0.5.9"
embassy-time = "0.5.0"
embassy-executor = "0.9.1"
static_cell = "2.1.1"
embassy-net =  { version = "0.8.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  #addition:
  "dns",
]}
reqwless = { version ="0.14.0", default-features=false, features = [
  "embedded-tls",
]}
embassy-sync = "0.7.2"
heapless = "0.9.2"
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
